--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,21 @@
 # Python
 venv/
+.venv/
 __pycache__/
 *.pyc
 
 # Environment
 .env
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Model files (if any)
-*.gguf
-*.bin
-
-# Logs
-*.log
+# Node
+node_modules/
+dist/
+dist-ssr/
+.vite/
+*.local
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -26,16 +23,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Model files
+*.gguf
+*.bin
 
-# Editor directories and files
+# OS
+.DS_Store
+Thumbs.db
+
+# Editors
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
